# ladish

./: .cvsignore  .gitignore  .gitmodules  AUTHORS  BUILDING  COPYING  ChangeLog  ChangeLog.old  Doxyfile  GNUmakefile  INSTALL  Makefile.am  NEWS  README  README-docinfo-header.html  README-docinfo.html  README.SECURITY  README.adoc  THANKS  TODO  acinclude.m4  afl21.txt  assert.h  autogen.sh  autowaf.py  catdup.c  catdup.h  common.am  common.h  conf.c  configure.ac  dbus_constants.h  graph_dict_proxy.c  graph_dict_proxy.h  graph_proxy.c  graph_proxy.h  jack_proxy.c  jack_proxy.h  jmcore.c  ladish_control  (+19 more)
art/: gladish.desktop  meson.build  render-bitmaps.rb
cdbus/: helpers.c  interface.h  meson.build  method.c  method.h  object_path.c  object_path.h  signal.c  signal.h
clients/control/: .cvsignore  Makefile.am  client.c  client.h  lash_control.c  lash_control.h  main.c  project.c  project.h
clients/gtk_client/: Makefile.am  gtk_client.c  gtk_client.h  main.c
daemon/: Makefile.am  a2j_proxy.c  app_supervisor.c  app_supervisor.h  appdb.c  appdb.h  catdup.c  check_integrity.c  client.c  client.h  client_dependency.c  client_dependency.h  cmd.h  cmd_change_app_state.c  cmd_create_room.c  cmd_delete_room.c  cmd_exit.c  cmd_load_project.c  cmd_load_studio.c  cmd_new_app.c  cmd_new_studio.c  cmd_remove_app.c  cmd_rename_studio.c  cmd_save_project.c  cmd_save_studio.c  cmd_start_app.c  cmd_start_studio.c  cmd_stop_studio.c  cmd_unload_project.c  cmd_unload_studio.c  common.h  conf.h  control.c  control.h  cqueue.c  dbus.service.in  dbus_iface_control.c  dbus_iface_control.h  dbus_iface_server.c  dbus_iface_server.h  (+81 more)
daemon/legacy/: client.c  client.h  client_dependency.h  file.c  file.h  jack_mgr_client.c  jack_patch.h  jackdbus_mgr.h  project.c  project.h  server.c  store.c  store.h
dbus/: Makefile.am  error.c  error.h  helpers.c  helpers.h  interface.c  interface.h  introspection.c  introspection.h  method.c  method.h  object_path.c  object_path.h  service.c  service.h  signal.c  signal.h  types.h
docs/: .cvsignore  Makefile.am  api-proposal.html  fdl.texi  lash-manual.info  lash-manual.texi  lash-manual.texi.in
docs/lash-manual-html-one-page/: .cvsignore
docs/lash-manual-html-split/: .cvsignore  Makefile.am
flowcanvas/: Doxyfile  Makefile.am  NEWS  README  autogen.sh  configure.ac  flowcanvas.pc.in
flowcanvas/debian/: rules
flowcanvas/debian-sid/: control
flowcanvas/doc/: Makefile.am  mainpage.dox  reference.doxygen.in
flowcanvas/flowcanvas/: Canvas.h  Canvas.hpp  Connectable.h  Connectable.hpp  Connection.h  Connection.hpp  Ellipse.h  Ellipse.hpp  FlowCanvas.h  Item.h  Item.hpp  Makefile.am  Module.h  Module.hpp  Port.h  Port.hpp  flowcanvas.hpp  types.hpp
flowcanvas/src/: Item.cpp  (+8 more)
gui/: GladeFile.hpp  Patchage.cpp  Patchage.hpp  PatchageCanvas.cpp  PatchageCanvas.hpp  PatchageModule.hpp  PatchagePort.hpp  StateManager.cpp  StateManager.hpp  Widget.hpp  a2j_proxy.cpp  a2j_proxy.h  a2j_proxy.hpp  about.c  about.h  action.c  action.h  app_supervisor_proxy.c  app_supervisor_proxy.h  ask_dialog.c  ask_dialog.h  binary_location.h  canvas.c  canvas.cpp  canvas.h  common.h  common.hpp  control.c  control_proxy.c  control_proxy.h  create_room_dialog.c  create_room_dialog.h  dbus.c  dbus_helpers.c  dbus_helpers.h  dialogs.c  dynmenu.c  dynmenu.h  glade.c  glade.h  (+57 more)
lash/: Makefile.am  args.h  client.h  client_interface.h  client_interface_new.h  comm_buffer.h  comm_event.h  config.h  connect_params.h  debug.h  event.h  exec_params.h  file.h  internal.h  internal_headers.h  lash.h  list.h  loader.h  protocol.h  server_client.h  socket.h  types.h  xmalloc.h
lashd/: .cvsignore  Makefile.am  alsa_client.c  alsa_client.h  alsa_fport.c  alsa_fport.h  alsa_mgr.c  alsa_mgr.h  alsa_patch.c  alsa_patch.h  appdb.c  appdb.h  client.c  client.h  client_dependency.c  client_dependency.h  client_event.c  client_event.h  conn.c  conn.h  conn_mgr.c  conn_mgr.h  dbus_iface_control.c  dbus_iface_control.h  dbus_iface_server.c  dbus_iface_server.h  dbus_service.c  dbus_service.h  file.c  file.h  globals.h  jack_fport.c  jack_fport.h  jack_mgr.c  jack_mgr.h  jack_mgr_client.c  jack_mgr_client.h  jack_patch.c  jack_patch.h  jackdbus_mgr.c  (+19 more)
liblash/: .cvsignore  Makefile.am  args.c  client.c  client.h  comm.c  comm_buffer.c  comm_event.c  config.c  connect_params.c  dbus_iface_client.c  dbus_service.c  event.c  event.h  exec_params.c  file.c  lash.c  lash_config.c  lash_config.h  loader.c  protocol.c  socket.c  xmalloc.c
lv2core/: AUTHORS  Makefile.am  README  autogen.sh  configure.ac  lv2core.pc.in
machina/: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  machina.desktop.in
omins/: AUTHORS  ChangeLog  configure.ac
patchage/: Doxyfile  Makefile.am  NEWS  README  autogen.sh  configure.ac  patchage.desktop.in
patches/: Makefile.am
proxies/: a2j_proxy.c  a2j_proxy.h  app_supervisor_proxy.c  app_supervisor_proxy.h  common.h  conf_proxy.c  conf_proxy.h  control_proxy.c  control_proxy.h  graph_proxy.c  graph_proxy.h  jack_proxy.c  jack_proxy.h  jmcore_proxy.c  jmcore_proxy.h  lash_client_proxy.c  lash_client_proxy.h  meson.build  notify_proxy.c  notify_proxy.h  room_proxy.c  room_proxy.h  studio_proxy.c  studio_proxy.h
pylash/: Makefile.am  lash.c  lash.h  lash.i  test.py
raul/: ChangeLog  Makefile.am  Namespaces.cpp  README  autogen.sh  configure.ac  raul.pc.in
redlandmm/: ChangeLog  Makefile.am  configure.ac
src/: AlsaDriver.cpp  AlsaDriver.h  AlsaDriver.hpp  DBus.cpp  DBus.hpp  Driver.h  Driver.hpp  GladeFile.hpp  JackDbusDriver.cpp  JackDbusDriver.hpp  JackDriver.cpp  JackDriver.h  JackDriver.hpp  JackSettingsDialog.h  JackSettingsDialog.hpp  LashClient.hpp  LashDriver.cpp  LashDriver.h  LashDriver.hpp  LoadProjectDialog.cpp  Makefile.am  Mutex.h  Patchage.cpp  Patchage.h  Patchage.hpp  PatchageCanvas.cpp  PatchageCanvas.h  PatchageCanvas.hpp  PatchageEvent.cpp  PatchageEvent.h  PatchageEvent.hpp  PatchageFlowCanvas.cpp  PatchageFlowCanvas.h  PatchageModule.h  PatchageModule.hpp  PatchagePort.h  PatchagePort.hpp  PortID.hpp  Project.cpp  ProjectList.hpp  (+27 more)
(+1069 files in other folders)
