icon_dir = get_option('datadir') / 'icons/hicolor'

install_subdir('16x16', install_dir : icon_dir)
install_subdir('22x22', install_dir : icon_dir)
install_subdir('24x24', install_dir : icon_dir)
install_subdir('32x32', install_dir : icon_dir)
install_subdir('48x48', install_dir : icon_dir)
install_subdir('256x256', install_dir : icon_dir)

images = [
  'ladish-logo-128x128.png',
  'status_down.png',
  'status_error.png',
  'status_started.png',
  'status_stopped.png',
  'status_unloaded.png',
  'status_warning.png',
]

install_data(images, install_dir : data_dir)
